test-network-k8s/predefinedOrg/orderer/orderer-orderer1.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: XYZorderer-orderer1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: XYZorderer-orderer1
  template:
    metadata:
      labels:
        app: XYZorderer-orderer1
    spec:
      containers:
        - name: main
          image: ${FABRIC_CONTAINER_REGISTRY}/fabric-orderer:${FABRIC_VERSION}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6050
            - containerPort: 8443
            - containerPort: 9443
          volumeMounts:
            - name: fabric-volume
              mountPath: /var/hyperledger
            - name: fabric-config
              mountPath: /var/hyperledger/fabric/config
            - name: tls-cert-volume
              mountPath: /var/hyperledger/fabric/config/tls
              readOnly: true
      volumes:
        - name: fabric-volume
          persistentVolumeClaim:
            claimName: fabric-XYZorderer
        - name: fabric-config
          configMap:
            name: XYZorderer-config
        - name: tls-cert-volume
          secret:
            secretName: XYZorderer-orderer1-tls-cert
---
apiVersion: v1
kind: Service
metadata:
  name: XYZorderer-orderer1
spec:
  ports:
    - name: general
      port: 6050
      protocol: TCP
    - name: operations
      port: 8443
      protocol: TCP
    - name: admin
      port: 9443
      protocol: TCP
  selector:
    app: XYZorderer-orderer1

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app: XYZorderer-orderer1
  name: XYZorderer-orderer1
spec:
  ingressClassName: nginx
  rules:
    - host: XYZorderer-orderer1.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: XYZorderer-orderer1
                port:
                  name: general
            path: /
            pathType: ImplementationSpecific
    - host: XYZorderer-orderer1-admin.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: XYZorderer-orderer1
                port:
                  name: admin
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - XYZorderer-orderer1.${DOMAIN}
    - hosts:
        - XYZorderer-orderer1-admin.${DOMAIN}
